--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,9 @@
 name: base
 channels:
-  - defaults
+  - conda-forge
 dependencies:
   - spacy
   - pandas
   - openpyxl
   - nltk
-  - pip:
-    - unicode  
+  - unicode  
