--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,9 @@
 name: base
-channels:
-  - conda-forge
 dependencies:
   - spacy
   - pandas
   - openpyxl
   - nltk
   - pip:
-    - unicode  
+    - unicode 
+    - click
