--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,10 @@
 name: base
-channels:
-  - conda-forge
 dependencies:
   - spacy
   - pandas
   - openpyxl
   - nltk
-  - unidecode
+  - pip
+  - pip:
+    - unidecode
   
